--- a/front-end/index.html
+++ b/front-end/index.html
@@ -2,4 +2,17 @@
 
 <html>
 
+<head>
+    <title>teeUp: Bid for Tee Time Savings</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular.js"></script>
+    <script src="https://npmcdn.com/angular-ui-router@1.0.0-beta.3/release/angular-ui-router.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <script src="app.js"></script>
+</head>
+
+<body>
+    <h1>teeUp</h1>
+</body>
+
 </html>
