end of wednesday

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -11,8 +11,13 @@
     <script src="app.js"></script>
 </head>
 
-<body>
-    <h1>teeUp</h1>
+<body ng-app="teeUpApp">
+    <header>
+        <h1>teeUp</h1>
+        <p>Bid for Your Tee-Time Savings!</p>
+    </header>
+    
+    <ui-view></ui-view>
 </body>
 
 </html>
