--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,6 +8,10 @@
     <script src="https://npmcdn.com/angular-ui-router@1.0.0-beta.3/release/angular-ui-router.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <!--<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4SgeCA2qVkQUcZNBODUlw1wjrzqNoTls&callback=initMap">
+    </script>-->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4SgeCA2qVkQUcZNBODUlw1wjrzqNoTls&libraries=places"></script>
     <script src="app.js"></script>
 </head>
 
