--- a/front-end/index.html
+++ b/front-end/index.html
@@ -11,6 +11,7 @@
     <!--<script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4SgeCA2qVkQUcZNBODUlw1wjrzqNoTls&callback=initMap">
     </script>-->
+    <script src="https://cdn.rawgit.com/BioPhoton/angular1-star-rating/v1.2.4/dist/index.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4SgeCA2qVkQUcZNBODUlw1wjrzqNoTls&libraries=places"></script>
     <script src="app.js"></script>
 </head>
