--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular.js"></script>
     <script src="https://npmcdn.com/angular-ui-router@1.0.0-beta.3/release/angular-ui-router.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <!--<script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4SgeCA2qVkQUcZNBODUlw1wjrzqNoTls&callback=initMap">
@@ -19,9 +20,17 @@
 <body ng-app="teeUpApp">
     <header>
         <h1>teeUp</h1>
+        <img src="assets/noun_934403_cc.png">
     </header>
-    
+
+<div class="container">
     <ui-view></ui-view>
+</div>
+
 </body>
+
+<!--<div class="footer">
+    <footer>TeeUp, LLC Copyright 2017</footer>
+</div>-->
 
 </html>
