changes to styling/map search

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -15,10 +15,10 @@
 </head>
 
 <body ng-app="teeUpApp">
-    <header>
+    <!--<header>
         <h1>teeUp</h1>
         <img src="assets/noun_934403_cc.png">
-    </header>
+    </header>-->
 
 <div class="container">
     <ui-view></ui-view>
