course location map

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular.js"></script>
     <script src="https://npmcdn.com/angular-ui-router@1.0.0-beta.3/release/angular-ui-router.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBThXaZvB7GkChQZJWQh1ls3D3HUyPzgo"></script>-->
     <link href="https://fonts.googleapis.com/css?family=Dosis|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.rawgit.com/BioPhoton/angular1-star-rating/v1.2.4/dist/index.js"></script>
