--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,28 +7,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular.js"></script>
     <script src="https://npmcdn.com/angular-ui-router@1.0.0-beta.3/release/angular-ui-router.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBThXaZvB7GkChQZJWQh1ls3D3HUyPzgo"></script>-->
     <link href="https://fonts.googleapis.com/css?family=Dosis|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.rawgit.com/BioPhoton/angular1-star-rating/v1.2.4/dist/index.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4SgeCA2qVkQUcZNBODUlw1wjrzqNoTls&libraries=places"></script>
+    <script src="http://momentjs.com/downloads/moment.js"></script>
     <script src="app.js"></script>
 </head>
 
 <body ng-app="teeUpApp">
-    <!--<header>
-        <h1>teeUp</h1>
-        <img src="assets/noun_934403_cc.png">
-    </header>-->
 
 <div class="container">
     <ui-view></ui-view>
 </div>
 
 </body>
-
-<!--<div class="footer">
-    <footer>TeeUp, LLC Copyright 2017</footer>
-</div>-->
 
 </html>
